# weft

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: dataset_packs.json
docs/: EXPERIMENTS.md  WEFT_SPEC.md  WEFT_WHITEPAPER.md  index.html  paper.css  script.js  styles.css  whitepaper.html
docs/assets/: bench_data.json
samples/inputs/: _generate.py
scripts/: experiment_dashboard.py  experiment_regression.py  generate_site_assets.py  run_campaign.py  whitepaper_bench.py
src/weft/: __init__.py  api.py  benchmark.py  bicubic.py  bitstream.py  cli.py  constants.py  cuda_backend.py  dct_residual.py  decoder.py  device_plan.py  edge_analysis.py  encoder.py  entropy.py  experiments.py  feature_flags.py  gpu_context.py  gpu_encoder.py  gpu_entropy.py  gpu_render.py  gpu_score.py  gradient_field.py  image_io.py  intrinsic.py  metrics.py  palette.py  prim_chunks.py  prim_streams.py  primitives.py  quadtree.py  render.py  sweep.py  types.py
src/weft/kernels/: README.md  cccl_ops.cu  tile_score.cu
tests/: test_auto_select.py  test_bicubic.py  test_bitstream.py  test_cccl_selection.py  test_container_v2.py  test_dct_residual.py  test_decomposition.py  test_entropy.py  test_feature_flags.py  test_gpu_policy.py  test_gradient_field.py  test_hierarchical_tiling.py  test_palette.py  test_rd_scoring.py  test_res2.py  test_sweep.py  test_verify.py
